--- a/styles/indexstyles.css
+++ b/styles/indexstyles.css
@@ -2,6 +2,13 @@ html,body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+    width: 100%;
+    max-width: 100%;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 main{
